[package]
name = "axhash-map"
version = "0.1.2"
edition = "2024"
authors = ["Bagus Dwi Harianto robbymangkualam2000@gmail.com"]
license = "MIT"
repository = "https://github.com/robby031/axhash-map"
description = "High-performance HashMap and HashSet backed by hashbrown (SwissTable) and fueled by axhash."
keywords = ["hashmap", "hashset", "hash", "performance", "swisstable"]
categories = ["data-structures", "algorithms"]
readme = "README.md"

[dependencies]
axhash-core = "0.8.2"
hashbrown = { version = "0.17.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "map_comparison"
harness = false
